--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
       </div>
     </div>
   </nav> -->
-  <nav class="navbar navbar-expand-lg bg-body-secondary" id="nav">
+
+  <!-- <nav class="navbar navbar-expand-lg bg-body-secondary" id="nav"> -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-body-secondary" id="nav">
+
   <div class="container-fluid">
     <a class="navbar-brand text-light fs-2" href="#home">ADnox</a>
 
@@ -264,11 +267,11 @@
     
 
     <div class="map-container mt-3">
-      <iframe
+      <!-- <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2011746.823961801!2d73.87358931214901!3d10.000909599174438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65bbfec0ffad9%3A0xb051ea9f41600354!2siMagine%20HiLite%20Mall%20(Apple%20Premium%20Reseller)%2C%20Calicut!5e0!3m2!1sen!2sin!4v1765179319116!5m2!1sen!2sin"
         style="width: 400px; height: 250px; border-radius: 10px; border: 0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade">
-      </iframe> 
+      </iframe>  -->
     </div>
      <div class="col-12 text-center text-white">
 
